--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Andy's Mods",
+  "name": "AndysMods",
   "version_number": "1.2.0",
   "website_url": "https://github.com/DrFeederino/AndysModsPlugin",
   "description": "[V45] Collection of the mods to the game. Currently, it has: Rare-Bonk mod - makes shovel to lethally bonk anyone with 10% chance, Landmines Are No Joke - Enemies can also trigger and die from landmines.",
