--- a/AndysModsPlugin.csproj
+++ b/AndysModsPlugin.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net48</TargetFramework>
     <AssemblyName>AndysModsPlugin</AssemblyName>
     <Description>Collection of mods packaged with care and love by Andy aka "DrFeederino".</Description>
-    <Version>1.3.0</Version>
+    <Version>1.4.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -13,6 +13,10 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DebugType>Portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>True</Optimize>
   </PropertyGroup>
   
   <ItemGroup>
@@ -31,6 +35,9 @@
     <!-- Don't forget to change path -->
       <HintPath>D:\SteamLibrary\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="LC_API">
+      <HintPath>..\..\..\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\Default\BepInEx\plugins\2018-LC_API\LC_API.dll</HintPath>
+    </Reference>
     <Reference Include="LethalCompanyInputUtils">
       <HintPath>..\Rune580-LethalCompany_InputUtils-0.4.3\LethalCompanyInputUtils\LethalCompanyInputUtils.dll</HintPath>
     </Reference>
@@ -43,5 +50,9 @@
       <HintPath>D:\SteamLibrary\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.Netcode.Runtime.dll</HintPath>
     </Reference> 
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cd C:\Users\kamaz\Documents\GitHub\NetcodePatcher-2.4.0\plugins\&#xD;&#xA;del * /q&#xD;&#xA;copy $(TargetPath) .&#xD;&#xA;copy $(TargetDir)*.pdb .&#xD;&#xA;cd ..&#xD;&#xA;NetcodePatcher.dll plugins/ deps/&#xD;&#xA;cd plugins/&#xD;&#xA;del $(ProjectName)_original.dll /q&#xD;&#xA;del $(ProjectName)_original.pdb /q&#xD;&#xA;copy /Y * C:\Users\kamaz\AppData\Roaming\r2modmanPlus-local\LethalCompany\profiles\Default\BepInEx\plugins\DrFeederino-AndysMods&#xD;&#xA;del * /q&#xD;&#xA;" />
+  </Target>
 
 </Project>
