--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "AndysMods",
-  "version_number": "1.3.0",
+  "version_number": "1.4.0",
   "website_url": "https://github.com/DrFeederino/AndysModsPlugin",
-  "description": "[V45] Collection of the mods to the game. New: Quick Switch With 1/2/3/4!",
+  "description": "[V45] Rare Bonk is now played for all players!",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
-    "Rune580-LethalCompany_InputUtils-0.4.3"
+    "Rune580-LethalCompany_InputUtils-0.4.3",
+    "2018-LC_API-3.1.0"
   ]
 }
