--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "AndysMods",
-  "version_number": "1.4.0",
+  "version_number": "1.5.0",
   "website_url": "https://github.com/DrFeederino/AndysModsPlugin",
-  "description": "[V45] Rare Bonk is now played for all players!",
+  "description": "Lethal Turrets are out! Happy New Year!",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
     "Rune580-LethalCompany_InputUtils-0.4.3",
