--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "AndysMods",
-  "version_number": "1.5.1",
+  "version_number": "1.5.2",
   "website_url": "https://github.com/DrFeederino/AndysModsPlugin",
-  "description": "Lethal Turrets are out! Happy New Year!",
+  "description": "V47 compatible.",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
     "Rune580-LethalCompany_InputUtils-0.4.3",
