--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "AndysMods",
-  "version_number": "1.8.3",
+  "version_number": "1.8.4",
   "website_url": "https://github.com/DrFeederino/AndysModsPlugin",
   "description": "V50 COMPATIBLE",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
-    "Rune580-LethalCompany_InputUtils-0.7.3",
-    "2018-LC_API-3.4.5"
+    "Rune580-LethalCompany_InputUtils-0.7.4",
+    "DrFeederino-LC_API_V50-3.4.6"
   ]
 }
