--- a/thunderstore/manifest.json
+++ b/thunderstore/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "AndysMods",
-  "version_number": "1.8.6",
+  "version_number": "1.8.7",
   "website_url": "https://github.com/DrFeederino/AndysModsPlugin",
-  "description": "V50 COMPATIBLE",
+  "description": "V55 READY TO GO",
   "dependencies": [
     "BepInEx-BepInExPack-5.4.2100",
     "Rune580-LethalCompany_InputUtils-0.7.4",
-    "DrFeederino-LC_API_V50-3.4.8"
+    "DrFeederino-LC_API_V50-3.4.9"
   ]
 }
